--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,5 +1,5 @@
 ---
-title: "About"
+title: "Page Not Found"
 layout: single
 excerpt: "Page not found. Your pixels are in another space.."
 sitemap: false
